@@ -1,4 +1,4 @@
-Copyright (c) 2014, huku
+Copyright (c) 2014-2015, huku
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification,
